--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "gapi-script": "^1.2.0",
+    "google-auth-library": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
